# emulator

./: CMakeLists.txt
doc/: Emulator.h2m  emulator.cfg.example  emulator.conf.example  sharemind-emulator.h2m
packaging/configs/sharemind/: emulator-access-control.conf  emulator.conf
packaging/debian/: conffiles
src/: AccessPolicy.cpp  AccessPolicy.h  CommandLineArguments.cpp  CommandLineArguments.h  Configuration.cpp  Configuration.h  EmulatorConfiguration.cpp  EmulatorConfiguration.h  EmulatorException.cpp  EmulatorException.h  Syscalls.cpp  Syscalls.h  main.cpp
